; ModuleID = '/home/carl/AnghaBench/radare2/libr/debug/p/native/extr_w32.c_build_debug_pid.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/debug/p/native/extr_w32.c_build_debug_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 }

@MAX_PATH = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_3__*)* @build_debug_pid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @build_debug_pid(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %9 = load i32, i32* @MAX_PATH, align 4
  %10 = add nsw i32 %9, 1
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %3, align 8
  %13 = alloca i8, i64 %11, align 16
  store i64 %11, i64* %4, align 8
  %14 = load i32, i32* @MAX_PATH, align 4
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* @FALSE, align 4
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i64 @w32_OpenProcess(i32 4096, i32 %15, i32 %18)
  store i64 %19, i64* %8, align 8
  store i8 0, i8* %13, align 16
  %20 = load i64, i64* %8, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %1
  br i1 true, label %23, label %26

23:                                               ; preds = %22
  %24 = load i64, i64* %8, align 8
  %25 = call i32 @w32_QueryFullProcessImageName(i64 %24, i32 0, i8* %13, i32* %5)
  br label %26

26:                                               ; preds = %23, %22
  %27 = load i64, i64* %8, align 8
  %28 = call i32 @CloseHandle(i64 %27)
  br label %29

29:                                               ; preds = %26, %1
  %30 = load i8, i8* %13, align 16
  %31 = icmp ne i8 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %29
  %33 = call i8* @r_sys_conv_win_to_utf8(i8* %13)
  store i8* %33, i8** %7, align 8
  br label %39

34:                                               ; preds = %29
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i8*, i8** %36, align 8
  %38 = call i8* @r_sys_conv_win_to_utf8(i8* %37)
  store i8* %38, i8** %7, align 8
  br label %39

39:                                               ; preds = %34, %32
  %40 = load i8*, i8** %7, align 8
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 1
  %43 = load i32, i32* %42, align 8
  %44 = call i32* @r_debug_pid_new(i8* %40, i32 %43, i32 0, i8 signext 115, i32 0)
  store i32* %44, i32** %6, align 8
  %45 = load i8*, i8** %7, align 8
  %46 = call i32 @free(i8* %45)
  %47 = load i32*, i32** %6, align 8
  %48 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %48)
  ret i32* %47
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @w32_OpenProcess(i32, i32, i32) #2

declare dso_local i32 @w32_QueryFullProcessImageName(i64, i32, i8*, i32*) #2

declare dso_local i32 @CloseHandle(i64) #2

declare dso_local i8* @r_sys_conv_win_to_utf8(i8*) #2

declare dso_local i32* @r_debug_pid_new(i8*, i32, i32, i8 signext, i32) #2

declare dso_local i32 @free(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
